Closed Bug 427420 Opened 17 years ago Closed 17 years ago

selection decoration lines (spell checker's underline and IME composing string underline) are not displayed

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla1.9

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod, regression)

Attachments

(1 file)

The selection decoration lines (underline of spell checker and underline of IME composition string) are not painted on 2008040606/Vista. That works fine on 2008040504/Vista.
Flags: blocking1.9?
Assignee: nobody → masayuki
Blocks: 421042
Status: NEW → ASSIGNED
Attached patch fixSplinter Review
Attachment #313967 - Flags: superreview?(roc)
Attachment #313967 - Flags: review?(roc)
It fails to paint dashed/dotted lines only. So, the underline of IME composition string on Linux and Mac are not problem (they are solid line).
OS: Windows Vista → All
Hardware: PC → All
test tets tetetestst
(In reply to comment #2) > It fails to paint dashed/dotted lines only. So, the underline of IME > composition string on Linux and Mac are not problem (they are solid line). > Does this mean you've noticed the lack of underline on Mac and think it's something else, or that you don't know of a problem on the Mac? I marked my bug as dupe because I right clicked a misspelled word and, while it wasn't underlined, the suggestions were there.
Tom: I said for the underline of IME composition string. The underline of spell checker is always dotted style on all platforms.
Attachment #313967 - Flags: superreview?(roc)
Attachment #313967 - Flags: superreview+
Attachment #313967 - Flags: review?(roc)
Attachment #313967 - Flags: review+
Flags: blocking1.9? → blocking1.9+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008040804 Minefield/3.0pre and using an equivalent nightly on Tiger.
Status: RESOLVED → VERIFIED
Flags: in-litmus?
Target Milestone: --- → mozilla1.9
I have different results that Marcia and the original reporter. On Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008042404 Firefox/3.0b1, the red underline shows up properly, but right-clicking on the misspelled word doesn't result in any suggested spellings. Same bug, or do I need to start a new one?
I'm unsure if this bug has bounced back in some way. I seem to notice when writing some words are not flagged up with decorations. My spelling is abysmal and I'm forever going back to posts I have written and correcting the errors. Perhaps I'm paranoid and I'm missing decorated text when commenting.
Ty and Simon, which builds are you using? Everything works fine for me when using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9pre) Gecko/2008042806 Minefield/3.0pre ID:2008042806
Henrik, I'm using the build I listed in comment #10. However, it turns out that the behavior is due to some sort of conflict with Optimoz Mouse Gestures 1.5.2. So for the first time in years, I am not using gestures :( Gestures and tabs are the reasons I switched to Ff.
Ok, so if anything is still happen without extensions it should be filed as a new bug. This one only handles the raised regression.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: