Bug 427420 selection decoration lines (spell checker's underline and IME composing string underline) are not displayed r+sr+b1.9=roc